# paper-dice-dps

./: README.md  README.org  environment.yml  makefile  makefile_common  makefile_dicedps  requirements.txt
misc/borg/: CMakeLists.txt  borg4platypus.pat
misc/scripts/: compile_borg.sh  qmake.sh  setup_env.sh
pkgs/borg4platypus/: README.org  borgc_acib.py  setup.py
pkgs/borg4platypus/borg4platypus/: __init__.py  borgc.py  liveplot.py
pkgs/borg4platypus/examples/: comparison_borg.py  constrained_problem.py  constrained_problem2.py  example_quadratic.py  example_quadratic_debug.py  seeds.py  simple_borg.py  test_mpi.py  test_multiple_seeds.py  test_plot.py  test_read_results.py
pkgs/borgpy/: setup.py
pkgs/borgpy/borgpy/: __init__.py
pkgs/brick/: .gitignore  makefile
pkgs/brick/Python/: test-forcing.py
pkgs/brick/R/: BRICK_coupledModel.R
pkgs/brick/calibration/: BRICK_assimLikelihood.R  BRICK_calib_driver.R  BRICK_install_packages.R  BRICK_parameterSetup.R  DOECLIM_readData.R  GSIC_assimLikelihood.R  SIMPLE_assimLikelihood.R  TE_assimLikelihood.R  bounds.csv  mcmc-diagnostics.R  mcmc-test.R  priors.R  rds2nc.R  test.R  write_bounds.R
pkgs/brick/data/: GLB.Ts+dSST.csv  HadCRUT.4.6.0.0.annual_ns_avg.txt  IAP_OHC_estimate_update.txt  TOA_OHC_errorbar_1940_2015_2.txt  cheng_ohc.txt  cheng_ohc_0-2000m.txt  forcing_hindcast_giss.csv  makefile  test.txt
pkgs/brick/fingerprints/: Antarctic_shore_fingerprints.csv
pkgs/brick/fortran/: Makefile
pkgs/dicedps/: MANIFEST.in  makefile  setup.py
pkgs/dicedps/dicedps/: __init__.py  algos_tqdm.py  brick_params.py  dice_helper.py  dice_moea.py  doeclim_moea.py  dpsrules.py  environ.py  extrap_climate_forcings.py  interactive.py  objectives.py  (+18 more)
pkgs/paradice/: MANIFEST.in  README.org  setup.py
pkgs/paradicedoeclim/: README.org  setup.py
pkgs/paradigm/: README.org  setup.py
pkgs/paradoeclim/: README.org  setup.py
(+184 files in other folders)
